publishdialog.cpp,h - validate email address string before accepting

Differential Revision: https://phabricator.kde.org/D9263
BUG: 386988